[workspace]
members = ["scheduler-core", "scheduler-server", "scheduler-cli"]


resolver = "2"   




[workspace.package]
edition = "2021"
rust-version = "1.76"

[workspace.dependencies]


futures-util = { version = "0.3", features = ["sink"] }

anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
tokio = { version = "1.39", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
dashmap = "5.5"

